# pmake

./: .gitignore  Cargo.toml  README.md  pmake.make  remake.make
.github/workflows/: rust.yml
docs/: standard_1.md
src/: main.rs
src/algorithm/: mod.rs  topological.rs
src/engine/: bin.rs  command.rs  context.rs  engine.rs  error.rs  function.rs  mod.rs  parser.rs  pfile.rs  rule.rs  target.rs  variable.rs
src/engine/ast/: ast.rs  mod.rs
src/parser/: control.rs  error.rs  mod.rs  parse.rs  preparse.rs
src/parser/parsing/: expression.rs  mod.rs  parse_statement.rs  parsing.rs  utility.rs
src/standard/: help.rs  mod.rs  print.rs
src/tool/: mod.rs  printer.rs
src/tools/: mod.rs  printer.rs
