[package]
name = "pmake"
version = "0.1.0"
edition = "2018"
authors = ["GOSCPS Team <goscps@foxmail.com>"]
homepage = "https://github.com/GOSCPS/remake"
license = "GOSCPS License v3"
description = "The make-like build system"
readme = "README.md"
repository = "https://github.com/GOSCPS/remake"

[dependencies]
owo-colors = "2.0.0"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
num_enum = "0.5.1"
